--- a/style.css
+++ b/style.css
@@ -19,16 +19,17 @@ justify-content: center;
 .google{
   width: 125px;
   height: 150px;
-  right: 50px;
-  position: relative;
+  right: 40%;
+  position: absolute;
   border-top: 50px solid var(--blue);
   border-right: 50px solid var(--blue);
   border-bottom: 50px solid var(--blue);
   border-radius: 0 0 200px 0;
 
+
 }
 .google::before{
-  display: block;
+  position: absolute;
   content: '';
   width: 250px;
   height: 250px;
@@ -38,6 +39,6 @@ justify-content: center;
   border-right: 50px solid transparent;
   border-radius: 200px;
   position: absolute;
-  top: 50px;
-  right: -50px;
+  margin:90%;
+  right: 0%;
 }
